fix divider style on small device

--- a/src/components/TimeAndSalary/TimeAndSalaryBoard/TimeAndSalaryBoard.module.css
+++ b/src/components/TimeAndSalary/TimeAndSalaryBoard/TimeAndSalaryBoard.module.css
@@ -48,4 +48,8 @@
 
 .extremeRow {
   background-color: #f1f1f1;
+
+  .noBefore::before {
+    content: none !important;
+  }
 }
